--- a/Signals_Courses/Signals_Courses.ioc
+++ b/Signals_Courses/Signals_Courses.ioc
@@ -1,10 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T3_TRGO
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
 ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
@@ -47,8 +47,9 @@ Mcu.IP3=FSMC
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM7
-Mcu.IPNb=8
+Mcu.IP7=TIM3
+Mcu.IP8=TIM7
+Mcu.IPNb=9
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -79,25 +80,28 @@ Mcu.Pin30=PD4
 Mcu.Pin31=PD5
 Mcu.Pin32=PG12
 Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin36=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin4=PC15-OSC32_OUT
 Mcu.Pin5=PF9
 Mcu.Pin6=PF10
 Mcu.Pin7=PH0-OSC_IN
 Mcu.Pin8=PH1-OSC_OUT
 Mcu.Pin9=PA4
-Mcu.PinsNb=35
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=37
+Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.EXTI4_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -198,7 +202,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FSMC_Init-FSMC-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FSMC_Init-FSMC-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -278,12 +282,25 @@ SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.DSPOoLibraryJjLibrary_Checked=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.IPParameters=LibraryCcDSPOoLibraryJjDSPOoLibrary
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=true
+STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
+TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode
+TIM3.Period=9
+TIM3.Prescaler=84-1
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM7.IPParameters=Period,Prescaler,TIM_MasterOutputTrigger
 TIM7.Period=4199
 TIM7.Prescaler=0
 TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode=DSPOoLibraryJjLibrary
+VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
