--- a/Signals_Courses/Signals_Courses.ioc
+++ b/Signals_Courses/Signals_Courses.ioc
@@ -49,7 +49,8 @@ Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM3
 Mcu.IP8=TIM7
-Mcu.IPNb=9
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -71,25 +72,27 @@ Mcu.Pin22=PD9
 Mcu.Pin23=PD10
 Mcu.Pin24=PD14
 Mcu.Pin25=PD15
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PD0
-Mcu.Pin29=PD1
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA13
+Mcu.Pin29=PA14
 Mcu.Pin3=PC14-OSC32_IN
-Mcu.Pin30=PD4
-Mcu.Pin31=PD5
-Mcu.Pin32=PG12
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin36=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin30=PD0
+Mcu.Pin31=PD1
+Mcu.Pin32=PD4
+Mcu.Pin33=PD5
+Mcu.Pin34=PG12
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin38=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin4=PC15-OSC32_OUT
 Mcu.Pin5=PF9
 Mcu.Pin6=PF10
 Mcu.Pin7=PH0-OSC_IN
 Mcu.Pin8=PH1-OSC_OUT
 Mcu.Pin9=PA4
-Mcu.PinsNb=37
+Mcu.PinsNb=39
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -112,12 +115,16 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA4.Signal=COMP_DAC1_group
 PA5.Signal=ADCx_IN5
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -202,7 +209,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FSMC_Init-FSMC-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FSMC_Init-FSMC-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -288,13 +295,16 @@ STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=tr
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
 TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger,TIM_MasterSlaveMode
 TIM3.Period=9
-TIM3.Prescaler=84-1
+TIM3.Prescaler=21-1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM7.IPParameters=Period,Prescaler,TIM_MasterOutputTrigger
 TIM7.Period=4199
 TIM7.Prescaler=0
 TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+USART1.BaudRate=230400
+USART1.IPParameters=VirtualMode,BaudRate
+USART1.VirtualMode=VM_ASYNC
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode=DSPOoLibraryJjLibrary
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Signal=STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 VP_SYS_VS_Systick.Mode=SysTick
